phase2_Dev/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Is_My_Provider_Type__c</fullName>
        <description>This field is used in report / dashboard to identify if the user is concerned by this provider: for example a FCC licensor does not need to see statistics related SLGSA provider.</description>
        <formula>IF( CONTAINS( $UserRole.Name , &quot;R &amp; P&quot;), 
        IF(OR ( RecordType.Name = &quot;Adoption Agency&quot;, RecordType.Name = &quot;Foster Care Agency&quot;, RecordType.Name = &quot;Group Care&quot;, RecordType.Name = &quot;Umbrella&quot;, RecordType.Name = &quot;Temporary Shelter&quot;), TRUE, FALSE),

IF( CONTAINS( $UserRole.Name , &quot;FCC&quot;), 
        IF(OR ( RecordType.Name = &quot;Family Child Care&quot;, RecordType.Name = &quot;FCC Assistant&quot;), TRUE, FALSE),

IF( CONTAINS( $UserRole.Name , &quot;SLGSA&quot;), 
        IF(OR ( RecordType.Name = &quot;Umbrella&quot;, RecordType.Name = &quot;Large Group&quot;, RecordType.Name = &quot;Small Group&quot;), TRUE, FALSE),

TRUE)))</formula>
        <label>Is My Provider Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Placement__c</fullName>
        <formula>IF( OR (RecordType.Name = &quot;Adoption Agency&quot;, RecordType.Name = &quot;Foster Care Agency&quot;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Placement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Provider_With_Licensing_Transaction__c</fullName>
        <formula>IF(
OR(

 RecordType.Name = &quot;Group Care&quot;,
 RecordType.Name = &quot;Temporary Shelter&quot;,
 RecordType.Name = &quot;Adoption Agency&quot;,
 RecordType.Name = &quot;Foster Care Agency&quot;,
 RecordType.Name = &quot;Large Group&quot;,
 RecordType.Name = &quot;Small Group&quot;,
 RecordType.Name = &quot;Family Child Care&quot;,
 RecordType.Name = &quot;FCC Assistant&quot;

),

TRUE,

FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Provider With Licensing Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_R_P__c</fullName>
        <description>Return True if this is an R&amp;P provider</description>
        <formula>OR(Is_Residential__c,  Is_Placement__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is R&amp;P</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Residential__c</fullName>
        <description>Is checked if the provider is a Group Care or Temporary Shelter</description>
        <formula>IF( OR (RecordType.Name = &quot;Group Care&quot;, RecordType.Name = &quot;Temporary Shelter&quot;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is checked if the provider is a Group Care or Temporary Shelter</inlineHelpText>
        <label>Is Residential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_your_program_contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contracted Program?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kindergarten_Responsible__c</fullName>
        <label>Kindergarten Responsible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kindergarten_School_Age__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Kindergarten / School Age</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kindergarten__c</fullName>
        <label>Kindergarten</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LTs_with_status_Cancelled_by_Applicant__c</fullName>
        <description>This field is used with LEAD-3416 and determines the number of LTs attached to Visit. Used if an application is withdrawn.</description>
        <label># LTs with status Cancelled by Applicant</label>
        <summaryFilterItems>
            <field>Licensing_Transaction__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled (by Applicant)</value>
        </summaryFilterItems>
        <summaryForeignKey>Licensing_Transaction__c.Provider__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Non-English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LastCalcDiffVisit__c</fullName>
        <description>This is copy of &quot;Last_Calculated_Differential_Visit__c&quot; field so we can use in need a licensing visit formula field to avoid formula limits.</description>
        <label>LastCalcDiffVisit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Address_Change_Date__c</fullName>
        <description>Updated and filled with today&apos;s date each time the address of the provider is changed (field considered as a change = Street Address 1 and / or City). Not set when the record is created.</description>
        <label>Last Address Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Calculated_Differential_Visit__c</fullName>
        <formula>IF(  !ISBLANK(Last_Licensing_Visit__c) , Last_Licensing_Visit__c ,
  IF ( (ISPICKVAL(License_Status__c , &apos;Licensed&apos;) &amp;&amp;  Last_Issue_Date__c + 365 &gt; TODAY()), Last_Issue_Date__c, 
  IF ( (ISPICKVAL(License_Status__c , &apos;Licensed&apos;) &amp;&amp;  Last_Issue_Date__c + 730 &gt; TODAY()), Last_Issue_Date__c + 365,
  IF ( (ISPICKVAL(License_Status__c , &apos;Licensed&apos;) &amp;&amp;  RecordType.Name == &apos;Family Child Care&apos; &amp;&amp;  Last_Issue_Date__c + 1095 &gt; TODAY()), Last_Issue_Date__c + 730, null ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Calculated Differential Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Change_of_Director_Date__c</fullName>
        <description>Updated and filled if a contact with role &quot;Main Contact / Licensee&quot; or &quot;Director&quot; is added or if an existing contact with this role is changed (= first name AND last name modified in the same time).</description>
        <label>Last Change of Director Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Investigation_Conclusion_Notificati__c</fullName>
        <label>Last Investi. Concl. Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Issue_Date__c</fullName>
        <inlineHelpText>Date of the last time the license was issued</inlineHelpText>
        <label>Last Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Legal_Order_Change_Date__c</fullName>
        <description>Updated and filled with today&apos;s date each time &quot;Legal Order&quot; field is changed to a value &lt;&gt; NULL</description>
        <label>Last Legal Order Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Licensing_Visit__c</fullName>
        <inlineHelpText>Last licensing / monitoring / progress visit that will be used in order to determine the date of the next monitoring visit</inlineHelpText>
        <label>Last Licensing Visit</label>
        <summarizedField>Inspection__c.Date_of_Visit__c</summarizedField>
        <summaryFilterItems>
            <field>Inspection__c.Type_of_Visit__c</field>
            <operation>equals</operation>
            <value>Pre-Licensing, Provisional License Renewal, Renewal, Monitoring, Progress, Enhanced Monitoring,, Renewal - Full Review, Renewal - Enhanced Monitoring</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Inspection__c.Status__c</field>
            <operation>notEqual</operation>
            <value>To be scheduled, Scheduled, Cancelled</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Inspection__c.Date_of_Visit__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Inspection__c.Provider_No__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Mid_Cycle_Review_Date__c</fullName>
        <description>This date is updated by a workflow that is triggered when a change of date is done on a Mid-Cycle Visit. It&apos;s updated with the latest Mid Cycle Review visit date. This field is used to determine, in the case of GSA provider, if the next automated visit is a mid-cycle or a monitoring</description>
        <label>Last Mid Cycle Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Portal_User__c</fullName>
        <formula>CONTAINS( LastModifiedBy.Profile.Name , &quot;Community&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used in workflow as a workaround to a SF process flow bug</inlineHelpText>
        <label>Last Modified By Portal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Provider_Type_Change_Date__c</fullName>
        <description>Updated and filled with today&apos;s date each time the record type of the provider is changed. Not set when the record is created.</description>
        <label>Last Provider Type Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Quarterly_Restraint_Published__c</fullName>
        <inlineHelpText>Date of the last quarterly restraint available</inlineHelpText>
        <label>Last Quarterly Restraint Published</label>
        <summarizedField>Restraint_Report__c.First_Day_Quarter_Date__c</summarizedField>
        <summaryForeignKey>Restraint_Report__c.Provider__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Renewal_Visit_Reason__c</fullName>
        <label>Last Renewal Visit Reason</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Visit_Date__c</fullName>
        <label>Last Visit Date</label>
        <summarizedField>Inspection__c.Date_of_Visit__c</summarizedField>
        <summaryFilterItems>
            <field>Inspection__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Inspection__c.Provider_No__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_updated_date__c</fullName>
        <description>Date last updated</description>
        <label>Last updated date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Paint_Compliance__c</fullName>
        <inlineHelpText>Lead Compliance: Evidence of construction post 1978</inlineHelpText>
        <label>Lead Paint: Constructed post 1978</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legacy_System_Type__c</fullName>
        <externalId>true</externalId>
        <label>Legacy System # Type</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legal_Action_details__c</fullName>
        <label>Legal Action details</label>
        <picklist>
            <controllingField>Provider_Status__c</controllingField>
            <picklistValues>
                <fullName>Picklist values awaited</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Legal_Order__c</fullName>
        <inlineHelpText>If Legal Order is chosen as status, please select the items associated to the legal order.</inlineHelpText>
        <label>Legal Order</label>
        <picklist>
            <controllingField>License_Status__c</controllingField>
            <picklistValues>
                <fullName>Referred for legal action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrollment Freeze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanctions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revoked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surrendered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cease and Desist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Case File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revocation in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probationary</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Level_of_Care__c</fullName>
        <label>Level of Care</label>
        <picklist>
            <picklistValues>
                <fullName>Transition to Independent Living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential School/ 766</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DYS Staff Secure Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential School / Own School (not 766)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teen Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DYS Hardware Secure Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DYS Transition to Independent Living​​</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCF Foster Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DYS Foster Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracted CFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Term Transitional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>​International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Infant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCF/Special Needs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STARR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Respite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DYS Detention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DYS Assessment​​</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelter Home</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>License_For_10_Upgrade_Date__c</fullName>
        <label>License For 10 Upgrade Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Status__c</fullName>
        <label>License Status</label>
        <picklist>
            <picklistValues>
                <fullName>Licensed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Licensed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <picklist>
            <picklistValues>
                <fullName>Regular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Provisional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second Provisional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probationary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Prov. for Public Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second Prov. for Public Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delegated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular Public Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhanced Regular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Licensing_Transaction_Closed__c</fullName>
        <description>This field will be used in report to check if we need to use the legacy provider # (should be the case until licensing transactions are not fully processed in the system) or the LEAD provider # (will be the case once we use transaction)</description>
        <label># Licensing Transaction Closed</label>
        <summaryFilterItems>
            <field>Licensing_Transaction__c.Status__c</field>
            <operation>equals</operation>
            <value>Closed (Processed), Closed (License Issued / Updated)</value>
        </summaryFilterItems>
        <summaryForeignKey>Licensing_Transaction__c.Provider__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Licensor_Email__c</fullName>
        <formula>Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Licensor Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licensor_Full_Name__c</fullName>
        <description>The fully concatenated name of the Account Owner/Licensor</description>
        <formula>Owner.FirstName &amp; &quot; &quot; &amp;  Owner.LastName</formula>
        <inlineHelpText>Fully concatenated name of the Licensor</inlineHelpText>
        <label>Licensor Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licensor_Phone__c</fullName>
        <formula>Owner.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Licensor Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licensor_s_Manager_Email__c</fullName>
        <formula>Owner.Manager.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Licensor&apos;s Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_at_this_address__c</fullName>
        <label>Live at this address</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Locked_Facility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked Facility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Reformated__c</fullName>
        <label>Mailing Address Reformated</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MaxAgeServed__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MaxAgeServed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Age_Months__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Max. Age Months</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Age_Years_LG_SG__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Max. Age Years</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Licensing_Assist_Update_Trans_Date__c</fullName>
        <description>Date of the latest closed licensing transaction that requires the user to update the list of assistant</description>
        <label>Max Licensing Assist Update Trans Date</label>
        <summarizedField>Licensing_Transaction__c.Date_Time_Transaction_Closed__c</summarizedField>
        <summaryFilterItems>
            <field>Licensing_Transaction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>FCC Provider Assistant Update, FCC License Upgrade, FCC New License, FCC Renewal</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Licensing_Transaction__c.Status__c</field>
            <operation>equals</operation>
            <value>Closed (Processed), Closed (License Issued / Updated)</value>
        </summaryFilterItems>
        <summaryForeignKey>Licensing_Transaction__c.Provider__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MinAgeServed__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MinAgeServed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Min_Age_Months__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Min. Age Months</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Age_Years_LG_SG__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Min. Age Years</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Program_Director_Licensee__c</fullName>
        <label>Most Recent Program Director / Licensee</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multi_Age_Group_birth_14_yr__c</fullName>
        <label>Multi-Age Group (birth - 14 yr)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NUmber_Monitoring_Visit__c</fullName>
        <description>Calculate the number of monitoring visit. This is used in GSA to know if the next visit is Mid-Cycle or Monitoring</description>
        <label>Number Monitoring Visit</label>
        <summaryFilterItems>
            <field>Inspection__c.Type_of_Visit__c</field>
            <operation>equals</operation>
            <value>Monitoring</value>
        </summaryFilterItems>
        <summaryForeignKey>Inspection__c.Provider_No__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Name_of_contract_administrator__c</fullName>
        <label>Name of contract administrator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_a_licensing_visit__c</fullName>
        <description>This formula is used to calculate if the Provider needs the creation of an automated visit or not. If yes, the text mention what type of visit is required.</description>
        <formula>IF( TEXT(License_Status__c) = &quot;Licensed&quot;,

IF( Record_Type_Name__c = &quot;Family Child Care&quot;, 

IF( (First_Issue_Date__c + 180 /* 180 days used as 6 MONTHS */ &lt;= TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &amp;&amp; TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &lt;= First_Issue_Date__c + 185 /* 185 days used as 6 MONTHS +5 DAYS */) || (First_Issue_Date__c + 545 /* 545 days used as 18 MONTHS */ &lt;= TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &amp;&amp; TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &lt;= First_Issue_Date__c + 550 /* 550 days used as 18 MONTHS + 5 DAYS */)||
(License_For_10_Upgrade_Date__c  + 150 /* 150 days used as 5 MONTHS */ &lt;= TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &amp;&amp; TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &lt;= License_For_10_Upgrade_Date__c + 155 /* 155 days used as 5 MONTHS + 5 DAYS */)||
(License_For_10_Upgrade_Date__c + 545 /* 545 days used as 18 MONTHS */ &lt;= TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &amp;&amp; TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &lt;= License_For_10_Upgrade_Date__c + 550 /* 550 days used as 18 MONTHS + 5 DAYS */), &quot;Progress&quot;, IF( (Last_Licensing_Visit__c + 365 /* 365 days used as 12 MONTHS */&lt;= TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &amp;&amp; TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &lt;= Last_Licensing_Visit__c + 370 /* 370 days used as 12 MONTHS + 5 DAYS */)&amp;&amp;  Renewal_date__c - 180 /* 180 days used as 6 MONTHS */ &gt;= TODAY() , &quot;Monitoring&quot;, &quot;&quot;)),


IF( Is_GSA__c ,

IF( (First_Issue_Date__c + 180 /* 180 days used as 6 MONTHS */ &lt;= TODAY() +          Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &amp;&amp; 
TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &lt;=First_Issue_Date__c + 185 /* 185 days used as 6 MONTHS + 5 DAYS */), &quot;Provisional License Renewal&quot;,

IF( (Last_Licensing_Visit__c + 365 /* 365 days used as 12 MONTHS */&lt;= TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &amp;&amp; TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &lt;= Last_Licensing_Visit__c + 370 /* 370 days used as 12 MONTHS + 5 DAYS */)
&amp;&amp;  Renewal_date__c - 180 /* 180 days used as 6 MONTHS */ &gt;= TODAY() , IF( Last_Mid_Cycle_Review_Date__c &lt;=TODAY()-1825 /* 1825 days used as 5 YEARS */||(ISBLANK(Last_Mid_Cycle_Review_Date__c) &amp;&amp;  NUmber_Monitoring_Visit__c &gt;+1),&quot;Enhanced Monitoring&quot;,&quot;Monitoring&quot;), &quot;&quot;)),


IF(  Is_R_P__c  ,

IF( (First_Issue_Date__c + 180 /* 180 days used as 6 MONTHS */ &lt;= TODAY() +          Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &amp;&amp; 
TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &lt;=First_Issue_Date__c + 185 /* 185 days used as 6 MONTHS + 5 DAYS */), &quot;Provisional License Renewal&quot;,

IF((Last_Licensing_Visit__c + 365 /* 365 days used as 12 MONTHS */&lt;= TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &amp;&amp; TODAY() + Config_Record__r.Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c &lt;= Last_Licensing_Visit__c + 370 /* 370 days used as 12 MONTHS + 5 DAYS */)
&amp;&amp;  Renewal_date__c - 180 /* 180 days used as 6 MONTHS */ &gt;= TODAY() 
,&quot;Monitoring&quot;,&quot;&quot;)

)
,&quot;&quot;))
),

&quot;&quot;)</formula>
        <label>Need a licensing visit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_In_Last_60_Days__c</fullName>
        <formula>IF(  AND(ISPICKVAL( License_Status__c , &quot;Licensed&quot;),  TODAY() - First_Issue_Date__c &lt;= 60), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New In Last 60 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_FCC_Renewal_Visit__c</fullName>
        <label>Next FCC Renewal Visit</label>
        <picklist>
            <picklistValues>
                <fullName>Renewal - Full Review</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal - Enhanced Monitoring</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Renewal_Visit_Reason__c</fullName>
        <formula>IF( Is_GSA__c, 
IF(Last_Renewal_Visit_Reason__c == &apos;Renewal - Full Review&apos;, &apos;Renewal - Monitoring&apos;, 
IF((Last_Renewal_Visit_Reason__c == &apos;Renewal - Monitoring&apos; &amp;&amp; Previous_Licensing_Visit_Reason__c == &apos;Enhanced Monitoring&apos;), &apos;Renewal - Monitoring&apos;, &apos;Renewal - Full Review&apos;)), 
IF(Last_Renewal_Visit_Reason__c == &apos;Renewal - Full Review&apos;, &apos;Renewal - Enhanced Monitoring&apos;, &apos;Renewal - Full Review&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Renewal Visit Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Adoptive_Placements__c</fullName>
        <description>Number of Adoptive Placements for Adoption Agencies</description>
        <inlineHelpText>Number of Adoptive Placements for Adoption Agencies</inlineHelpText>
        <label>No. Adoptive Placements</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Birth_Mothers_Making_Adoption_Plan__c</fullName>
        <description>Number of Birth Mothers Who Made an Adoption Plan for Adoption Agencies</description>
        <inlineHelpText>Number of Birth Mothers Who Made an Adoption Plan for Adoption Agencies</inlineHelpText>
        <label>No. Birth Mothers Making Adoption Plan</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Birth_Mothers_Receiving_Services__c</fullName>
        <description>Number of Birth Mothers Who Received Services for Adoption Agencies</description>
        <inlineHelpText>Number of Birth Mothers Who Received Services for Adoption Agencies</inlineHelpText>
        <label>No. Birth Mothers Receiving Services</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Families_Rec_Home_Stdy_Serv_Only__c</fullName>
        <description>Number of Families Receiving Home Study Service Only for Adoption Agencies</description>
        <inlineHelpText>Number of Families Receiving Home Study Service Only for Adoption Agencies</inlineHelpText>
        <label>No. Families Rec Home Stdy Serv Only</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Families_Receiving_Info_and_Referral__c</fullName>
        <label>No. Families Receiving Info and Referral</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Indiv_Rec_Search_and_or_Reunion_Serv__c</fullName>
        <description>Number of Individuals Receiving Search and/or Reunion Services for Adoption Agencies</description>
        <inlineHelpText>Number of Individuals Receiving Search and/or Reunion Services for Adoption Agencies</inlineHelpText>
        <label>No. Indiv Rec Search and/or Reunion Serv</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>